--- a/session1/index.html
+++ b/session1/index.html
@@ -12,15 +12,15 @@
     <form class="p-2">
       <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">Task ID</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Task ID">
+        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Task ID">
       </div>
       <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">Task Title</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Task Title">
+        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Task Title">
       </div>
       <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">Task Content</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Task Content">
+        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Task Content">
       </div>
       <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">Task Types</label>
