--- a/task/index.html
+++ b/task/index.html
@@ -9,30 +9,40 @@
 </head>
 <body>
     <section class="container my-5 text-center buttons">
-        <button class="btn btn-primary" id="addbBtn">
+        <button class="btn btn-success" id="addbBtn">
             <span>Add Customer
             </span>
             </button>
-        <button class="btn btn-primary" id="showAllBtn">show All Customer</button>
-        <button class="btn btn-primary" id="showBtn">show Customer</button>
-        <button class="btn btn-primary" id="addBalanceBtn">Add Balance</button>
-        <button class="btn btn-primary" id="withDrawBtn">Withdraw</button>
+        <button class="btn btn-primary" id="showAllBtn">Show All Customers</button>
+        <button class="btn btn-warning" id="showBtn">Show Customer</button>
+        <!-- <button class="btn btn-primary" id="addBalanceBtn">Add Balance</button>
+        <button class="btn btn-primary" id="withDrawBtn">Withdraw</button> -->
     </section>
     <section id="addCustomer" class="container border border-2 my-3 d-none">
         <form class="p-2" id="addForm">
-            <!-- <div class="mb-3">
-                <label class="form-label">Account Number</label>
-                <input type="text" class="form-control" placeholder="Account Number" name="accNum" id="accNum">
-            </div> -->
             <div class="mb-3">
                 <label class="form-label">Name</label>
                 <input type="text" class="form-control" placeholder="Name" name="cName">
               </div>
               <div class="mb-3">
                 <label class="form-label">Balance</label>
-                <input type="text" class="form-control" placeholder="Balance" name="balance">
+                <input type="number" class="form-control" placeholder="Balance" name="balance">
               </div>
               <input type="submit" class="btn btn-success" value="add Customer">
+        </form>
+    </section>
+    <section id="editCustomer" class="container border border-2 my-3 d-none">
+        <form class="p-2" id="editForm">
+            <div class="mb-3">
+                <label class="form-label">Name</label>
+                <input type="text" class="form-control" placeholder="Name" name="cName">
+              </div>
+              <div class="mb-3">
+                <label class="form-label">Balance</label>
+                <input type="number" class="form-control" placeholder="Balance" name="balance">
+              </div>
+              <input type="hidden" value="" name="editAction">
+              <input type="submit" class="btn btn-success" value="Edit Customer">
         </form>
     </section>
     <section id="allCustomers" class="container border border-2 my-3 d-none">
@@ -42,15 +52,9 @@
                 <th>Name</th>
                 <th>Balance</th>
                 <th>actions</th>
+                <th>Control Balance</th>
             </thead>
             <tbody>
-                <td>1</td>
-                <td>a</td>
-                <td>2000$</td>
-                <td>
-                    <button class ="btn btn-danger mx-2">delete</button>
-                    <button class ="btn btn-success mx-2">edit</button>
-                </td>
             </tbody>
         </table>
     </section>
@@ -61,6 +65,19 @@
     </section>
     <section id="singleCustomer" class="container border border-2 my-3 d-none">
         
+    </section>
+    <section id="searchCustomer" class="container border border-2 my-3 d-none">
+
+    </section>
+    <section id="balanceSection" class="container border border-2 my-3 d-none">
+        <form class="p-2" id="balanceForm">
+            <div class="mb-3">
+                <label class="form-label">Balance</label>
+                <input type="number" class="form-control" placeholder="Balance" name="balance">
+              </div>
+              <input type="hidden" value="" name="cstIndex">
+              <input type="submit" class="btn btn-success" value="Withdraw Balance" name="balanceBtn">
+        </form>
     </section>
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
